# rship-unreal

./: .gitignore  .gitmodules  .ignore  AGENTS.md  CLAUDE.md  DIGITAL_TWIN_ARCHITECTURE.md  Makefile  PLAN_CALIBRATION_INTEGRATION.md  PLAN_TARGET_MANAGEMENT.md  README.md  RshipExec.uplugin  RshipSource.code-workspace  RshipSource.sln  RshipSource.uproject  UltimateControl.uplugin  clean-plugin.ps1  clean-rshipexec.bat  clean.bat  copy-pulse-plugins.bat
.claude/: settings.json
Binaries/Win64/: UnrealEditor-RshipExec.patch_0.exp  UnrealEditor-RshipExec.patch_0.lib  UnrealEditor-RshipExec.patch_1.exp  UnrealEditor-RshipExec.patch_1.lib  UnrealEditor-RshipExec.patch_2.exp  UnrealEditor-RshipExec.patch_2.lib  UnrealEditor-RshipExec.patch_3.exp  UnrealEditor-RshipExec.patch_3.lib  UnrealEditor.modules
Config/: DefaultEditor.ini  DefaultEngine.ini  DefaultGame.ini
Content/: BP_SKEL.uasset  SKM_Manny_Simple_CtrlRig.uasset  SM_Cylinder2_Blueprint.uasset  SM_Cylinder_Blueprint.uasset  StackSpawner.uasset  TestControlRig_Take1.uasset  Tile.uasset  TileSpawner.uasset  nDisplayConfig.uasset
Content/Blueprints/: BP_AtlasMapSampler.uasset  (+2 more)
Source/: RshipSource.Target.cs  RshipSourceEditor.Target.cs
Source/UltimateControl/MCP/: Cargo.toml
Source/UltimateControl/MCP/src/: main.rs
docs/: DISPLAY_MANAGEMENT_ARCHITECTURE.md  DISPLAY_MANAGEMENT_QUICKSTART.md  GETTING_STARTED.md  Rship_Cluster_Authoritative_Ingest_Manual.md  Rship_Frame_Sync_User_Manual.md  SPATIAL_AUDIO_ARCHITECTURE.md  UE57_BUILD_ERROR_NOTES.md  ULTIMATE_CONTROL_AGENT_AUDIT.md  UPGRADE_GUIDE.md  WINDOWS_BUILD_ENVIRONMENT.md  cluster-multi-rate-sync-design.md  content-mapping-end-to-end-manual.md  content-mapping-material-contract-implementation-plan.md  content-mapping-performance-overhaul-master-plan.md  content-mapping-requirements-canonical.md  content-mapping-requirements-conflicts.md  content-mapping-requirements-traceability.csv  content-mapping-reset-simplification.md  content-mapping-scratchpad.md  content-mapping-speed-ux-audit.md  content-mapping-ux-parity-matrix.md  rship-exec-50k-registration-plan.md  rship-field-implementation-plan.md
scripts/: package-plugin.bat  package-plugin.sh  run-content-mapping-e2e.bat  run-content-mapping-e2e.sh  verify-content-mapping-readiness.bat  verify-content-mapping-readiness.sh
ue5-mcp-bridge/: README.md  pyproject.toml
ue5-mcp-bridge/src/ue5_mcp_bridge/: __init__.py  client.py  install.py  server.py
(+1519 files in other folders)
